--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,7 +25,10 @@ html {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
-
+body {
+  width: 100%;
+  height: 100%;
+}
 /* all similar content styling codes */
 section {
   padding: 100px 0;
@@ -109,10 +112,10 @@ section .title::after {
   padding: 0;
 }
 .navbar.sticky .logo a {
-    color: #e7c95b;
-    font-size: 35px;
-    font-weight: 600;
-  }
+  color: #e7c95b;
+  font-size: 35px;
+  font-weight: 600;
+}
 .navbar .logo a span {
   color: #e7c95b;
   transition: all 0.3s ease;
@@ -349,44 +352,44 @@ section .title::after {
 }
 /* Cetifi section*/
 .Cetifi .title::after {
-    content: "Certificaciones";
-  }
-  
-  .Cetifi {
-    background-color: #fff;
-  }
-  .Cetifi .max-width .gallery-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 300px;
-    padding: 20px;
-    grid-gap: 30px;
-    text-align: center;
-  }
-  .Cetifi .gallery__item {
-    position: relative;
-  }
-  .Cetifi .gallery__img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 8px;
-    filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.5));
-  }
-  
-  .Cetifi .gallery__text {
-    position: absolute;
-    bottom: 0;
-    color: white;
-    background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 1));
-    width: 100%;
-    margin: 0;
-    padding: 10px;
-    text-align: center;
-    font-size: 20px;
-    border-radius: 8px;
-  }
-  
+  content: "Certificaciones";
+}
+
+.Cetifi {
+  background-color: #fff;
+}
+.Cetifi .max-width .gallery-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-rows: 300px;
+  padding: 20px;
+  grid-gap: 30px;
+  text-align: center;
+}
+.Cetifi .gallery__item {
+  position: relative;
+}
+.Cetifi .gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 8px;
+  filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.5));
+}
+
+.Cetifi .gallery__text {
+  position: absolute;
+  bottom: 0;
+  color: white;
+  background: linear-gradient(rgba(255, 255, 255, 0), rgba(0, 0, 0, 1));
+  width: 100%;
+  margin: 0;
+  padding: 10px;
+  text-align: center;
+  font-size: 20px;
+  border-radius: 8px;
+}
+
 /* proyects section*/
 .proyects .title::after {
   content: "Trabajos";
@@ -673,6 +676,13 @@ footer .socials .social_link {
   .contact .contact-content .column {
     width: 100%;
     margin-bottom: 35px;
+  }
+  .Cetifi .max-width .gallery-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .Cetifi .gallery__text {
+    font-size: 15px;
   }
 }
 
